--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -4,9 +4,22 @@
     tools:context="com.estimadoradwords.MainActivity" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/seccion1"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/seccion1"
         app:showAsAction="never"/>
+    
+     <item
+        android:id="@+id/seccion2"
+        android:orderInCategory="100"
+        android:title="@string/seccion2"
+        app:showAsAction="never"/>
+     
+      <item
+        android:id="@+id/seccion3"
+        android:orderInCategory="100"
+        android:title="@string/seccion3"
+        app:showAsAction="never"/>
+    
 
 </menu>
