--- a/res/layout/seccion_dos.xml
+++ b/res/layout/seccion_dos.xml
@@ -1,41 +1,67 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.estimadoradwords.MainActivity" >
+    android:paddingTop="@dimen/activity_vertical_margin" >
+
+    <TextView
+        android:id="@+id/textView22"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="290dp"
+        android:layout_marginTop="78dp"
+        android:text="Tienda en línea"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#0A0A2A"
+        android:textStyle="bold"
+        android:textSize="28sp" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:background="@color/green"
+        android:onClick="seccion2"
+        android:text="@string/enviar"
+        android:textStyle="bold"
+        android:textColor="#ffffff"
+        android:textSize="22sp" />
 
     <TableLayout
         android:id="@+id/tableLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="47dp" >
+        android:layout_above="@+id/button1"
+        android:layout_alignLeft="@+id/tableLayout2"
+        android:layout_marginBottom="95dp" >
 
         <TableRow
             android:id="@+id/tableRow1"
             android:layout_width="wrap_content"
-            android:layout_marginTop="50dp"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp" >
 
             <TextView
                 android:id="@+id/textView1"
-                android:textSize="18sp"
                 android:layout_width="130dp"
                 android:layout_height="wrap_content"
-                
-                android:text="@string/text1" />
+                android:text="@string/text1"
+                android:textSize="20sp" />
 
             <EditText
                 android:id="@+id/editText1"
                 android:layout_width="160dp"
-                android:textSize="18sp"
                 android:layout_height="wrap_content"
-                android:inputType="number" >
+                android:inputType="number"
+                android:textSize="20sp" >
 
                 <requestFocus />
             </EditText>
@@ -44,21 +70,21 @@
         <TableRow
             android:id="@+id/tableRow2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content" >
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/textView2"
-                android:textSize="18sp" />
+                android:textSize="20sp" />
 
             <EditText
                 android:id="@+id/editText2"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:inputType="number"
-                android:textSize="18sp" />
+                android:textSize="20sp" />
         </TableRow>
 
         <TableRow
@@ -71,14 +97,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/textView3"
-                android:textSize="18sp" />
+                android:textSize="20sp" />
 
             <EditText
                 android:id="@+id/editText3"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:inputType="number"
-                android:textSize="18sp" />
+                android:textSize="20sp" />
         </TableRow>
 
         <TableRow
@@ -91,104 +117,104 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/textView4"
-                android:textSize="18sp" />
+                android:textSize="20sp" />
 
             <EditText
                 android:id="@+id/editText4"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:inputType="number"
-                android:textSize="18sp"
-              />
+                android:textSize="20sp" />
         </TableRow>
-        
-        
+
         <TableRow
             android:id="@+id/tableRow5"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-             >
+            android:layout_height="wrap_content" >
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/textView5"
-                android:textSize="18sp" />
+                android:textSize="20sp" />
 
             <EditText
                 android:id="@+id/editText5"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:inputType="number"
-                android:textSize="18sp"
-              />
+                android:textSize="20sp" />
         </TableRow>
-              
+        
+         <TableRow
+            android:id="@+id/tableRow10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/c_empresa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/c_empresa"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/edit_empresa"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:textSize="20sp" />
+        </TableRow>
         
     </TableLayout>
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tableLayout1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:textColor="#ffffff" 
-        android:background="@color/green"
-        android:text="@string/enviar"
-        android:onClick="seccion1"
-        android:textSize="18sp" />
-
     <TableLayout
+        android:id="@+id/tableLayout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tableLayout1"
+        android:layout_alignParentLeft="true"
         android:layout_below="@+id/button1"
-        android:layout_marginTop="80dp"
-        android:layout_gravity="center"
-        android:textStyle="bold"
-          >
+        android:layout_marginLeft="77dp"
+        android:layout_marginTop="144dp"
+        android:textStyle="bold" >
 
         <TableRow
             android:id="@+id/tableRow6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-              >
+            android:layout_marginTop="50dp" >
 
             <TextView
                 android:id="@+id/textView6"
-                android:layout_width="110dp"
+                android:layout_width="180dp"
                 android:layout_height="30dp"
+                android:text="@string/clicks"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:text="@string/clicks" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView11"
-                android:layout_width="120dp"
+                android:layout_width="260dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
+                android:text="@string/porcentaje_empresa"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:text="@string/porcentaje" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView12"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="TextView" />
-
+                android:text="TextView"
+                android:textSize="20sp" />
         </TableRow>
 
         <TableRow
@@ -200,33 +226,32 @@
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
+                android:text="@string/cp_max"
                 android:textSize="20dp"
-                android:textStyle="bold"
-                android:text="@string/cp_max" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
+                android:text="@string/conversiones_empresa"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:text="@string/conversiones" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="TextView" />
-
+                android:text="TextView"
+                android:textSize="20sp" />
         </TableRow>
 
         <TableRow
@@ -238,33 +263,32 @@
                 android:id="@+id/textView14"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
+                android:text="@string/inversion"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                android:text="@string/inversion" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/textView16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:textStyle="bold"
                 android:layout_marginLeft="20dp"
-                android:text="@string/ganancia" />
+                android:text="@string/ganancia_x_conv"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView17"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="TextView" />
-
+                android:text="TextView"
+                android:textSize="20sp" />
         </TableRow>
 
         <TableRow
@@ -276,46 +300,36 @@
                 android:id="@+id/textView18"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
+                android:text="@string/tco"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:text="@string/tco" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView19"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView20"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
+                android:text="@string/ganancia_empresa"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:text="@string/ganancia2" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView21"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="TextView" />
-
+                android:text="TextView"
+                android:textSize="20sp" />
         </TableRow>
+        
+       
+        
     </TableLayout>
 
-    <TextView
-        android:id="@+id/textView22"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tableLayout1"
-        android:layout_alignParentTop="true"
-        android:textColor="#0A0A2A" 
-        android:layout_marginTop="20dp"
-        android:textStyle="bold"
-        android:text="Tienda en línea"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-  
 </RelativeLayout>
