Lógica de las estimaciones

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
                 android:id="@+id/editText2"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
-                android:inputType="number"
+                android:inputType="number|numberDecimal"
                 android:textSize="18sp" />
         </TableRow>
 
@@ -77,7 +77,7 @@
                 android:id="@+id/editText3"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
-                android:inputType="number"
+                android:inputType="number|numberDecimal"
                 android:textSize="18sp" />
         </TableRow>
 
@@ -97,9 +97,9 @@
                 android:id="@+id/editText4"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
-                android:inputType="number"
-                android:textSize="18sp"
-              />
+                android:inputType="number|numberDecimal"
+                android:textSize="18sp" />
+
         </TableRow>
         
         
@@ -120,9 +120,9 @@
                 android:id="@+id/editText5"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
-                android:inputType="number"
-                android:textSize="18sp"
-              />
+                android:inputType="number|numberDecimal"
+                android:textSize="18sp" />
+
         </TableRow>
               
         
@@ -170,24 +170,22 @@
                 android:id="@+id/textView8"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="TextView" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView11"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
+                android:text="@string/roi"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:text="@string/porcentaje" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView12"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="TextView" />
+                android:textSize="20sp" />
 
         </TableRow>
 
@@ -208,8 +206,7 @@
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="TextView" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView10"
@@ -224,8 +221,7 @@
                 android:id="@+id/textView13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="TextView" />
+                android:textSize="20sp" />
 
         </TableRow>
 
@@ -246,8 +242,7 @@
                 android:id="@+id/textView15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:text="TextView" />
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/textView16"
@@ -262,8 +257,7 @@
                 android:id="@+id/textView17"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="TextView" />
+                android:textSize="20sp" />
 
         </TableRow>
 
@@ -284,8 +278,7 @@
                 android:id="@+id/textView19"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="TextView" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView20"
@@ -300,8 +293,7 @@
                 android:id="@+id/textView21"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="TextView" />
+                android:textSize="20sp" />
 
         </TableRow>
     </TableLayout>
