--- a/res/layout/seccion_tres.xml
+++ b/res/layout/seccion_tres.xml
@@ -170,13 +170,108 @@
 
  <Button
      android:id="@+id/button5"
-     android:layout_width="wrap_content"
+     android:layout_width="130dp"
      android:layout_height="wrap_content"
      android:layout_alignRight="@+id/tableLayout2"
      android:layout_below="@+id/tableLayout2"
      android:layout_marginRight="258dp"
      android:layout_marginTop="122dp"
+     android:textStyle="bold"
+     android:textColor="#ffffff"
+     android:textSize="22sp"
      android:onClick="seccion3"
+     android:background="@color/green"
      android:text="@string/enviar" />
+
+ <TableLayout
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:layout_alignLeft="@+id/tableLayout2"
+     android:layout_below="@+id/button5"
+    android:layout_marginLeft="-30dp"
+     android:layout_marginTop="115dp" >
+
+     <TableRow
+         android:id="@+id/tableRow1"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content" >
+
+         <TextView
+             android:id="@+id/textView1"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="TextView" />
+
+         <TextView
+             android:id="@+id/textView5"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="TextView" />
+
+         <TextView
+             android:id="@+id/textView22"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="TextView" />
+
+         <TextView
+             android:id="@+id/textView23"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="TextView" />
+
+         <TextView
+             android:id="@+id/textView24"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="TextView" />
+
+         <TextView
+             android:id="@+id/textView25"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="TextView" />
+
+     </TableRow>
+
+     <TableRow
+         android:id="@+id/tableRow2"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content" >
+
+         <TextView
+             android:id="@+id/textView2"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="TextView" />
+
+     </TableRow>
+
+     <TableRow
+         android:id="@+id/tableRow3"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content" >
+
+         <TextView
+             android:id="@+id/textView3"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="TextView" />
+
+     </TableRow>
+
+     <TableRow
+         android:id="@+id/tableRow4"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content" >
+
+         <TextView
+             android:id="@+id/textView4"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="TextView" />
+
+     </TableRow>
+ </TableLayout>
     
 </RelativeLayout>
