--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -15,11 +15,11 @@
         android:title="@string/seccion2"
         app:showAsAction="never"/>
      
-      <item
+      <!--item
         android:id="@+id/seccion3"
         android:orderInCategory="100"
         android:title="@string/seccion3"
-        app:showAsAction="never"/>
+        app:showAsAction="never"/-->
     
 
 </menu>
