--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -19,23 +19,22 @@
         <TableRow
             android:id="@+id/tableRow1"
             android:layout_width="wrap_content"
-            android:layout_marginTop="50dp"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp" >
 
             <TextView
                 android:id="@+id/textView1"
-                android:textSize="18sp"
                 android:layout_width="130dp"
                 android:layout_height="wrap_content"
-                
-                android:text="@string/text1" />
+                android:text="@string/text1"
+                android:textSize="18sp" />
 
             <EditText
                 android:id="@+id/editText1"
                 android:layout_width="160dp"
-                android:textSize="18sp"
                 android:layout_height="wrap_content"
-                android:inputType="number" >
+                android:inputType="number"
+                android:textSize="18sp" >
 
                 <requestFocus />
             </EditText>
@@ -44,7 +43,7 @@
         <TableRow
             android:id="@+id/tableRow2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content" >
 
             <TextView
                 android:id="@+id/textView2"
@@ -99,33 +98,27 @@
                 android:layout_height="wrap_content"
                 android:inputType="number|numberDecimal"
                 android:textSize="18sp" />
-
         </TableRow>
-        
-        
+
         <TableRow
             android:id="@+id/tableRow5"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-             >
+            android:layout_height="wrap_content" >
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="40sp"
                 android:text="@string/textView5"
                 android:textSize="18sp" />
 
             <EditText
                 android:id="@+id/editText5"
                 android:layout_width="70dp"
-                android:layout_height="wrap_content"
+                android:layout_height="40sp"
                 android:inputType="number|numberDecimal"
                 android:textSize="18sp" />
-
         </TableRow>
-              
-        
     </TableLayout>
 
     <Button
@@ -135,36 +128,35 @@
         android:layout_below="@+id/tableLayout1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
-        android:textColor="#ffffff" 
         android:background="@color/green"
-        android:text="@string/enviar"
         android:onClick="seccion1"
+        android:text="@string/enviar"
+        android:textColor="#ffffff"
         android:textSize="18sp" />
 
     <TableLayout
+        android:id="@+id/tableLayout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/tableLayout1"
         android:layout_below="@+id/button1"
-        android:layout_marginTop="80dp"
         android:layout_gravity="center"
-        android:textStyle="bold"
-          >
+        android:layout_marginTop="80dp"
+        android:textStyle="bold" >
 
         <TableRow
             android:id="@+id/tableRow6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-              >
+            android:layout_marginTop="50dp" >
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="110dp"
                 android:layout_height="30dp"
+                android:text="@string/clicks"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:text="@string/clicks" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView8"
@@ -186,7 +178,6 @@
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:textSize="20sp" />
-
         </TableRow>
 
         <TableRow
@@ -198,9 +189,9 @@
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
+                android:text="@string/cp_max"
                 android:textSize="20dp"
-                android:textStyle="bold"
-                android:text="@string/cp_max" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView9"
@@ -213,16 +204,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
+                android:text="@string/conversiones"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:text="@string/conversiones" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20sp" />
-
         </TableRow>
 
         <TableRow
@@ -234,9 +224,9 @@
                 android:id="@+id/textView14"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
+                android:text="@string/inversion"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                android:text="@string/inversion" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView15"
@@ -248,17 +238,16 @@
                 android:id="@+id/textView16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:textStyle="bold"
                 android:layout_marginLeft="20dp"
-                android:text="@string/ganancia" />
+                android:text="@string/ganancia"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView17"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20sp" />
-
         </TableRow>
 
         <TableRow
@@ -270,9 +259,9 @@
                 android:id="@+id/textView18"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
+                android:text="@string/tco"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:text="@string/tco" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView19"
@@ -285,16 +274,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
+                android:text="@string/ganancia2"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:text="@string/ganancia2" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView21"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20sp" />
-
         </TableRow>
     </TableLayout>
 
@@ -304,10 +292,18 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/tableLayout1"
         android:layout_alignParentTop="true"
-        android:textColor="#0A0A2A" 
         android:layout_marginTop="20dp"
-        android:textStyle="bold"
         android:text="Tienda en línea"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-  
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#0A0A2A"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textView23"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/tableLayout2"
+        android:layout_below="@+id/button1"
+        android:layout_marginTop="44dp" />
+
 </RelativeLayout>
